language-server/src/tests/snapshots/gleam_language_server__tests__folding_range__does_not_fold_single_line_function_body.snap
---
source: language-server/src/tests/folding_range.rs
expression: "pub fn main() { 1 }"
snapshot_kind: text
---
----- Code -----
pub fn main() { 1 }

----- Ranges -----
(none)
