language-server/src/tests/snapshots/gleam_language_server__tests__folding_range__does_not_fold_single_line_top_level_definitions.snap
---
source: language-server/src/tests/folding_range.rs
expression: "pub type W { W(Int) }\npub const x = 1\npub type Pair = #(Int, Int)\npub fn main() { 1 }"
snapshot_kind: text
---
----- Code -----
pub type W { W(Int) }
pub const x = 1
pub type Pair = #(Int, Int)
pub fn main() { 1 }

----- Ranges -----
(none)
