language-server/src/tests/snapshots/gleam_language_server__tests__folding_range__does_not_fold_single_line_type_alias.snap
---
source: language-server/src/tests/folding_range.rs
expression: "pub type Pair = #(Int, Int)"
snapshot_kind: text
---
----- Code -----
pub type Pair = #(Int, Int)

----- Ranges -----
(none)
