language-server/src/tests/snapshots/gleam_language_server__tests__folding_range__doesnt_fold_single_line_comments.snap
---
source: language-server/src/tests/folding_range.rs
expression: "\n//// This is very useful module\n\n/// This is function for wibbling\nfn wibble() {\n  // Useful comment\n  todo\n}\n"
---
----- Code -----

//// This is very useful module

/// This is function for wibbling
fn wibble() {
  // Useful comment
  todo
}


----- Ranges -----
1. lines 4..7 kind: none

----- Fold 1 (lines 4..7) -----

//// This is very useful module

/// This is function for wibbling
fn wibble() { ...
